// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should also have the correct icon. 1`] = `
.c1 {
  stroke: #5DD167;
}

.c1.kirk-icon-wrapper {
  display: inline-block;
  position: relative;
}

.c1.kirk-icon-shadowed {
  border-radius: 50%;
  box-shadow: 0 0 2px rgba(0,0,0,.3);
}

.c1 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #054752;
  color: #FFF;
  border-radius: 16px;
  font-size: 16px;
  line-height: 20px;
  font-weight: 400;
  padding: 0 16px;
  max-height: 0;
  overflow-y: hidden;
  -webkit-animation: slide-down 700ms ease-out 300ms forwards;
  animation: slide-down 700ms ease-out 300ms forwards;
}

.c0 .kirk-pushInfo-headline {
  font-size: 18px;
  line-height: 20px;
  font-weight: 500;
  margin: 0 0 8px;
}

.c0 .kirk-pushInfo-headline--standalone {
  margin: 0;
}

.c0 .kirk-pushInfo-content {
  margin: 0;
}

.c0 .kirk-pushInfo-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 50%;
  min-width: 40px;
  height: 40px;
  margin-right: 16px;
  background-color: #FFF;
}

<div
  className="kirk-pushInfo c0"
>
  <div
    className="kirk-pushInfo-icon"
  >
    <svg
      aria-hidden={true}
      className="kirk-icon c1"
      fill="#5DD167"
      height={24}
      viewBox="0 0 20 20"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M10 20C4.477 20 0 15.523 0 10S4.477 0 10 0s10 4.477 10 10-4.477 10-10 10zm1.202-14.863a1.568 1.568 0 1 0 0-3.136 1.568 1.568 0 0 0 0 3.136zm.94 1.868h-.005a1.568 1.568 0 0 0-1.563-1.554h-.007c-2.252 0-3.896 1.32-4.288 2.692L5.5 11.051H6.926l.723-2.72 1.166-.825-.874 3.264L6.003 18h1.569l1.83-5.661 1.526 1.269.314 4.392h1.528v-5.02l-1.757-1.756.473-1.767a3.753 3.753 0 0 0 2.853 1.313h.314V9.515a2.51 2.51 0 0 1-2.51-2.51z"
        fill="#5DD167"
      />
    </svg>
  </div>
  <div>
    <h2
      className="kirk-pushInfo-headline"
    >
      If it's green it's a win!
    </h2>
    <p
      className="kirk-pushInfo-content"
    >
      Green icons show meeting points closest to you!
    </p>
  </div>
</div>
`;

exports[`Should have the correct attributes and text. 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #054752;
  color: #FFF;
  border-radius: 16px;
  font-size: 16px;
  line-height: 20px;
  font-weight: 400;
  padding: 0 16px;
  max-height: 0;
  overflow-y: hidden;
  -webkit-animation: slide-down 700ms ease-out 300ms forwards;
  animation: slide-down 700ms ease-out 300ms forwards;
}

.c0 .kirk-pushInfo-headline {
  font-size: 18px;
  line-height: 20px;
  font-weight: 500;
  margin: 0 0 8px;
}

.c0 .kirk-pushInfo-headline--standalone {
  margin: 0;
}

.c0 .kirk-pushInfo-content {
  margin: 0;
}

.c0 .kirk-pushInfo-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 50%;
  min-width: 40px;
  height: 40px;
  margin-right: 16px;
  background-color: #FFF;
}

<div
  className="kirk-pushInfo c0"
>
  <div>
    <h2
      className="kirk-pushInfo-headline"
    >
      If it's green it's a win!
    </h2>
    <p
      className="kirk-pushInfo-content"
    >
      Green icons show meeting points closest to you!
    </p>
  </div>
</div>
`;
